--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <title>Portfolio</title>
     <meta charset="UTF-8">
@@ -7,29 +8,39 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="main.css">
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
+
 <body>
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-    <div class="wrapper">
+    <div class="flex-settings">
+        <!-- Optional JavaScript -->
+        <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+            integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+            crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+            integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+            crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+            integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+            crossorigin="anonymous"></script>
         <!--header-->
         <header>
-            <div class="title">
-                <h1>Lindsey Robertson</h1>
-            </div>
             <nav id="nav-bar">
-                <ul>
-                    <li class="nav-option"><a href="#">About</a></li>
-                    <li class="nav-option"><a href="#">Projects</a></li>
-                    <li class="nav-option"><a href="#">Contact</a></li>
-                </ul>
             </nav>
         </header>
-        <div class="about-me">
+        <div class="title text-center">
+            <h1>Lindsey Robertson</h1>
+            <div class="navigation-buttons text-center">
+                <ul>
+                    <li class="btn btn-outline-light"><a href="#">About</a></button></li>
+                    <li class="btn btn-outline-light"><a href="#">Projects</a></button></li>
+                    <li class="btn btn-outline-light"><a href="#">Contact</a></button></li>
+                </ul>
+            </div>
+        </div>
+        <!-- <div class="about-me">
             <h3>About Me</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem illo, voluptate atque cupiditate fuga harum, nulla inventore eveniet perspiciatis sint, veniam quia praesentium voluptatibus asperiores earum possimus obcaecati est? Consequatur!</p>
         </div>
@@ -52,19 +63,16 @@
                 <input type="submit" value="Submit">
               </form>
         </div>
-        <div class="social-media"></div>
+        <div class="social-media"></div> -->
         <!--links for github, resume, and linkedin-->
 
-        <!--footer-->
-        <footer>
-            <div class="footer-box">
-                <h5>Lindsey Robertson &copy; 20201</h5>
-            </div>
-        </footer>
-
-
-
-
     </div>
+    <!--footer-->
+    <footer class="footer">
+        <div class="footer-box text-center">
+            <h5>Lindsey Robertson &copy; 2021</h5>
+        </div>
+    </footer>
 </body>
+
 </html>
