--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
 
 <body>
     <div class="flex-settings">
-        <!-- <div class="wrapper"> -->
         <!-- Optional JavaScript -->
         <!-- jQuery first, then Popper.js, then Bootstrap JS -->
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
@@ -65,7 +64,7 @@
             </div>
         </div>
     
-        <!-- <div class="contact">
+        <div class="contact-me">
             <h3 class="section-header text-center">Contact Me</h3>
             <form id="fs-frm" name="simple-contact-form" accept-charset="utf-8" action="https://formspree.io/f/xayaqarz" method="post">
                 <fieldset id="fs-frm-inputs">
@@ -77,19 +76,16 @@
                   <textarea rows="5" name="message" id="message" placeholder="Enter your message here." required=""></textarea>
                   <input type="hidden" name="_subject" id="email-subject" value="Contact Form Submission">
                 </fieldset>
-                <input type="submit" value="Submit">
-              </form> -->
-        <!-- </div>  -->
+                <input type="submit" value="Submit" class="submit-button">
+              </form>
+        </div>
+
         <!-- <div class="social-media"></div> -->
         <!--links for github, resume, and linkedin-->
+        <footer class="page-footer">
+            <h5 class="text-left">Lindsey Robertson &copy; 2021</h5>
+        </footer>
     </div>
-    <!-- </div> -->
-    <!--footer-->
-    <!-- <footer class="footer">
-        <div class="footer-box text-left">
-            <h5>Lindsey Robertson &copy; 2021</h5>
-        </div>
-    </footer> -->
 </body>
 
 </html>
