--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     <div class="about-button btn btn-outline-light"><a class="navigation-button" href="#about-me-link">About</a></button></div>
                     <div class="about-button btn btn-outline-light"><a class="navigation-button" href="#my-projects-link">Projects</a></button></div>
                     <div class="about-button btn btn-outline-light"><a class="navigation-button" href="#my-contact-link">Contact</a></button></div>
-                    <div class="about-button btn btn-outline-light"><a class="navigation-button" href="#">Resume</a></button></div>
+                    <div class="about-button btn btn-outline-light"><a class="navigation-button" href="Assets/Resume.pdf" target="_blank">Resume</a></button></div>
             </div>
 
             </nav>
@@ -94,48 +94,47 @@
                     <h3 class="section-header text-center">Projects</h3>
                 </div>
                 <div class="bottom">
-                    <!-- <div class="my-project-box">
-                        <div class="left">
-                            <h4>First Project</h4>
+                    <!-- <div class="my-project-box"> -->
+                        <!-- <div class="left">
                             <a href="https://codepen.io/skittles_037/pen/mdEvwRQ" target="_blank">
                             <div class="first-project-photo"></div>
                             </a>
                         </div>
                         <div class="right">
+                            <h4>First Project</h4>
                             <p>A create built using only CSS.</p>
-                        </div>
-                    </div> -->
-                    <div class="project-carosel">
+                        </div> -->
+
+                        <div class="carosel-project-box">
                         <div id="carouselId" class="carousel slide" data-ride="carousel">
                             <ol class="carousel-indicators">
                                 <li data-target="#carouselId" data-slide-to="0" class="active"></li>
                                 <li data-target="#carouselId" data-slide-to="1"></li>
                                 <li data-target="#carouselId" data-slide-to="2"></li>
+                                <li data-target="#carouselId" data-slide-to="3"></li>
+                                <li data-target="#carouselId" data-slide-to="4"></li>
+
                             </ol>
                             <div class="carousel-inner" role="listbox">
                                 <div class="carousel-item active">
-
-                                        <div class="left">
-                                            <h4>CSS Creature</h4>
-                                            <a href="https://codepen.io/skittles_037/pen/mdEvwRQ" target="_blank">
-                                            <div class="first-project-photo"></div>
-                                            </a>
-                                        </div>
-                                        <div class="right">
-                                            <p>A creature built using only CSS.</p>
-                                        </div>
-
+                                    <h4 class="text-center">CSS Creature</h4>
+                                    <a href="https://codepen.io/skittles_037/pen/mdEvwRQ" target="_blank"><img class="project-picture rounded mx-auto d-block img-responsive" src="Assets/CSSCreature.png" alt="CSS Creature"></a>
                                 </div>
                                 <div class="carousel-item">
-                                    <img class="img-thumbnail img-responsive" src="Assets/marek-piwnicki-mt9TrXpGQjo-unsplash.jpg" alt="Second slide">
+                                    <h4 class="text-center">Static Storefront</h4>
+                                    <img class="project-picture rounded mx-auto d-block img-responsive" src="Assets/StaticStore.png" alt="Static Storefront">
                                 </div>
                                 <div class="carousel-item">
-                                    <img class="img-thumbnail  img-responsive" src="Assets/LindseyRobertson2 - Copy.jpg" alt="Third slide">
+                                    <h4 class="text-center">Business Challenges</h4>
+                                    <img class="project-picture rounded mx-auto d-block img-responsive" src="Assets/BusinessChallenge.png" alt="Business Challenges">
                                 </div>
                                 <div class="carousel-item">
-                                    <img class="img-thumbnail  img-responsive" src="Assets/marek-piwnicki-mt9TrXpGQjo-unsplash.jpg" alt="Fourth slide">
-
-                                    <img class="img-thumbnail  img-responsive" src="Assets/marek-piwnicki-mt9TrXpGQjo-unsplash.jpg" alt="Fifth slide">
+                                    <h4 class="text-center">Operation Nutrition Ninja</h4>
+                                    <img class="project-picture rounded mx-auto d-block img-responsive" src="Assets/OperationNutritionNinja.jpg" alt="Operation Nutrition Ninja">
+                                </div>
+                                <div class="carousel-item">
+                                    <h4 class="text-center">Budget Builder</h4>
+                                    <img class="project-picture rounded mx-auto d-block img-responsive" src="Assets/BudgetBuilder.png" alt="Budget Builder">
                                 </div>
                             </div>
                             <a class="carousel-control-prev" href="#carouselId" role="button" data-slide="prev">
