futher corections to photo

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                             Software development has been a natural extension of the love of puzzles. An added bonus is that I get to use my creative side!
                             </p>
                         </div>   
-                        <div class="profile-photo-test col-sm-6">
+                        <div class="profile-photo-test col-sm-6 my-auto">
                             <img src="Assets/LindseyRobertson2 - Copy.jpg" class="rounded img-fluid" alt="...">
                         </div>
                     </div>
