--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                     <div class="container-fluid">
                     <div class="test-row row">
                         <div class="col-sm-6">
-                            <p class="biography">I'm a Northwest native who has called Indiana home for many years now. I hold a Humanities degree in English. With a background worked in retail, editing, marketing, and customer service, I am an prime candidate for the question “what do you do with a BA in English?”
+                            <p class="biography">I'm a Northwest native who has called Indiana home for many years now. I hold a Humanities degree in English. With a background worked in retail, editing, marketing, and customer service, I am a prime candidate for the question “what do you do with a BA in English?”
                             <br>
                             <br>
                             The majority of my career has been in the banking industry and I love helping people understand and improve their financial well-being.
